test/langtools/tools/javac/valhalla/lworld-values/CheckNullCastable.out
CheckNullCastable.java:10:54: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: compiler.misc.type.null, CheckNullCastable)
CheckNullCastable.java:11:17: compiler.err.value.does.not.support: !=
CheckNullCastable.java:12:18: compiler.err.incomparable.types: compiler.misc.type.null, CheckNullCastable
3 errors
